
 o Added option 'doFuture.globals.export' making it possible ignore a faulty
   '.export' argument to foreach() and instead rely on the future framework to
   identify globals.  For instance, all examples of caret 6.0-77 works with
   doFuture() and any backend when setting this option to "automatic" (or
   ".export-and-automatic") whereas they will only work on forked backends
   if using ".export" or the default "automatic-unless-.export".

DOCUMENTATION:

 o Added help("doFuture.options").

SOFTWARE QUALITY:

 o TESTS: The doFuture package gained more opt-in tests for third-party
   packages' across all known future backends.  These tests are not performed
   on the CRAN servers; instead they are performed on Travis CI.  Third-party
   packages that are currently tested are: caret, foreach, glmnet, NMF, plyr,
   and TSP.

 o TESTS: Testing global functions that call themselves recursively.


Version: 0.5.1 [2017-09-11]

RANDOM NUMBER GENERATION:

 o Package now suggests doRNG (>= 1.6.6), which fixes several bugs in
   doRNG (>= 1.6) previously suggested.
   
SOFTWARE QUALITY:

 o TESTS: Adding tests for globals part of other packages for future.BatchJobs
   and future.batchtools futures because in previous versions of those, such
   globals would not be found because the corresponding package was never
   attached in the worker.
 

Version: 0.5.0 [2017-03-31]

NEW FEATURES:

 o Added foreach() option to control whether scheduling ("chunking") should
   take place or not, and if so, how granular it should be.  This is specified
   as foreach(..., .options.future = list(scheduling = <value>)).  With
   scheduling = 1.0 (or equivalently scheduling = TRUE), the the elements
   (iterations) will be split up in equally sized chunks such that each backend
   worker will process exactly one chunk.  With scheduling = Inf (or
   equivalently scheduling = FALSE), chunking is disabled, i.e. each worker