@@ -15,14 +15,24 @@
 #'    Specifies to what extent the \code{.export} argument of
 #'    \code{\link[foreach]{foreach}()} should be respected or if globals
 #'    should be automatically identified.
+#' 
 #'    If \code{".export"}, then the globals specified by the \code{.export}
 #'    argument will be used "as is".
+#' 
 #'    If \code{"automatic"}, the future framework will be used to automatically
 #'    identify globals.
+#' 
 #'    If \code{".export-and-automatic"}, then globals specified by
 #'    \code{.export} as well as those automatically identified are used.
+#' 
 #'    If \code{"automatic-unless-.export"}, then globals are automatic
 #'    identified if argument \code{.export} is missing or \code{NULL}.
+#' 
+#'    The \code{".export-and-automatic-with-warning"} is the same as
+#'    \code{".export-and-automatic"}, but produces a warning if \code{.export}
+#'    lacks some of the globals that the automatic identification locates
+#'    - this is helpful feedback to developers using \code{foreach()}.
+#' 
 #'    (Default: \code{"automatic-unless-.export"})}
 #' }
 #'
