@@ -69,6 +69,51 @@ str(y5)
 stopifnot(identical(y5, y_truth))
 
 
+options(doFuture.foreach.export = ".export-and-automatic-with-warning")
+y1 <- foreach(1:2, .export = c("a", "b")) %dopar% { b * a }
+str(y1)
+stopifnot(identical(y1, y_truth))
+y2 <- foreach(1:2) %dopar% { b * a }
+str(y2)
+stopifnot(identical(y2, y_truth))
+y3 <- foreach(1:2, .export = NULL) %dopar% { b * a }
+str(y3)
+stopifnot(identical(y3, y_truth))
+y4 <- foreach(1:2, .export = "a") %dopar% { b * a }
+str(y4)
+stopifnot(identical(y4, y_truth))
+y5 <- foreach(1:2, .export = "c") %dopar% { b * a }
+str(y5)
+stopifnot(identical(y5, y_truth))
+
+## Assert warnings, if any
+res1 <- tryCatch({
+  foreach(1:2, .export = c("a", "b")) %dopar% { b * a }
+}, warning = identity)
+str(res1)
+stopifnot(identical(res1, y_truth))
+res2 <- tryCatch({
+  foreach(1:2) %dopar% { b * a }
+}, warning = identity)
+str(res2)
+stopifnot(inherits(res2, "warning"))
+res3 <- tryCatch({
+  foreach(1:2, .export = NULL) %dopar% { b * a }
+}, warning = identity)
+str(res3)
+stopifnot(inherits(res3, "warning"))
+res4 <- tryCatch({
+  foreach(1:2, .export = "a") %dopar% { b * a }
+}, warning = identity)
+str(res4)
+stopifnot(inherits(res4, "warning"))
+res5 <- tryCatch({
+  foreach(1:2, .export = "c") %dopar% { b * a }
+}, warning = identity)
+str(res5)
+stopifnot(inherits(res5, "warning"))
+
+
 options(doFuture.foreach.export = "automatic-unless-.export")
 y1 <- foreach(1:2, .export = c("a", "b")) %dopar% { b * a }
 str(y1)
